2009-10-16 Pierre Wieser <pwieser@trychlos.org>

	Let the user be asked when exporting actions.

	* src/nact/base-window.c (instance_dispose):
	Fix hiding widgets when toplevel has not been initialized.
	(base_window_run): Now returns a boolean.

	* src/nact/nact-assistant-export-ask.c:
	* src/nact/nact-assistant-export-ask.h: New files.

	* src/nact/Makefile.am:
	* src/nact/nact-assistant-export.ui: Updated accordingly.

	* src/nact/nact-assistant-export.c:
	Ask the user if needed.
	Reread the current export format for each action.

	Record last export format as a preference.

	* src/common/na-iprefs.c:
	* src/common/na-iprefs.h
	(na_iprefs_get_export_format, na_iprefs_set_export_format):
	New functions.

	* src/common/na-xml-names.h:
	Move export format constantes to src/common/na-iprefs.h.

	* src/common/na-xml-writer.c:
	* src/nact/nact-assistant-export.c:
	* src/nact/nact-assistant-export.ui:
	* src/nact/nact-assistant-import.c:
	* src/nact/nact-clipboard.c:
	* src/utils/nautilus-actions-new.c:
	* src/utils/nautilus-actions-schemas.c:
	Updated accordingly.

	* src/nact/nact-iactions-list.c (nact_iactions_list_fill):
	Only count items in edition mode.

	* src/nact/nact-tree-model.c
	(nact_tree_model_fill): Only check status in edition mode.
	(fill_tree_store): Add a ref when the action is embedded in a menu.

	* src/runtime/na-object-item.c (object_ref): Fix comment.

2009-10-15 Pierre Wieser <pwieser@trychlos.org>

	* src/runtime/na-object-item.c (object_are_equal):
	Remove debug trace.

	* configure.ac:
	* src/runtime/na-object-action-fn.h:
	NAUTILUS_ACTIONS_CONFIG_VERSION from configure.ac to
	na-object-action-fn.h as this is not a configuration information.

	New 'Ask user' import mode.

	* data/nautilus-actions.schemas.in:
	Define new 'import-ask-user' preference schema.
	Define new 'import-ask-user-last-mode' preference schema.
	Add 'Ask user' new value for 'import-mode' preference.
	Fix type and default value of 'import-mode'.

	* po/POTFILES.in: